# ProspectionCockpit

./: .env.example  .gitignore  Dockerfile  HOWTO.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.clinerules/: loop-engineering.md
.loop/: LOOP.md  STATE.md
loop-prompts/: cline-integration.md  loop-execute.md
skills/: architecture.md  project-context.md  rules.md
src/prospection_cockpit/: __init__.py
src/prospection_cockpit/api/: main.py
src/prospection_cockpit/domain/: __init__.py  consent.py  lead.py
